--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,7 @@
     "version": "0.2.0",
     "configurations": [
 
+
         
         {
             "name": "Python: Test Shopify Schema",
@@ -31,6 +32,20 @@
             "args": [
                 "--mode",
                 "debug",
+                "-u",
+                "http://neogeek.io:4001/graphql",
+            ]
+        },
+        {
+            "name": "Python: TestFuzzing",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/main.py",
+            "console": "integratedTerminal",
+            "justMyCode": true,
+            "args": [
+                "--mode",
+                "debug_fuzzing",
                 "-u",
                 "http://neogeek.io:4001/graphql",
             ]
